List Square categories and their items in admin panel

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -1,2 +1,4 @@
-DATABASE_URI=mongodb://127.0.0.1/plugin-development
+DATABASE_URI=mongodb://127.0.0.1:27017/plugin-development
 PAYLOAD_SECRET=hellohereisasecretforyou
+
+SQUARE_ACCESS_TOKEN=your-square-access-token
