--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,macos,windows,webstorm,sublimetext,visualstudiocode
+
+example-plugin-stripe
