--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,7 @@
   "singleQuote": true,
   "trailingComma": "all",
   "printWidth": 100,
-  "semi": false
+  "semi": true,
+  "useTabs": true,
+  "tabWidth": 4
 }
