--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@jeths/payload-plugin-square",
+  "name": "payloadcms-plugin-square",
   "version": "0.0.1-beta.1",
   "homepage:": "https://payloadcms.com",
-  "description": "Payload plugin to integrate with Square.",
+  "description": "Unofficial Square plugin for Payload",
   "author": "Jeth",
   "license": "MIT",
   "files": [
