--- a/package.json
+++ b/package.json
@@ -1,75 +1,78 @@
 {
-  "name": "payloadcms-plugin-square",
-  "version": "0.0.1-beta.1",
-  "homepage:": "https://payloadcms.com",
-  "description": "Unofficial Square plugin for Payload",
-  "author": "Jeth",
-  "license": "MIT",
-  "files": [
-    "dist",
-    "LICENSE.md",
-    "README.md"
-  ],
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
-  "type": "module",
-  "scripts": {
-    "build": "tsc --project tsconfig.json",
-    "build:all": "pnpm build && pnpm -C dev build",
-    "build:app": "pnpm -C dev build",
-    "clean": "rimraf {dist,*.tsbuildinfo,package}",
-    "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png}\" dist/",
-    "dev": "pnpm -C dev dev",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "prepack": "pnpm prepublishOnly",
-    "prepublishOnly": "pnpm clean && pnpm build && pnpm copyfiles"
-  },
-  "peerDependencies": {
-    "next": "15.0.0-canary.173",
-    "payload": "^3.0.0-beta.111"
-  },
-  "dependencies": {
-    "@payloadcms/ui": "3.0.0-beta.111",
-    "react": "19.0.0-rc-3edc000d-20240926",
-    "react-dom": "19.0.0-rc-3edc000d-20240926",
-    "square": "^39.0.0"
-  },
-  "devDependencies": {
-    "@payloadcms/eslint-config": "3.0.0-beta.97",
-    "@types/node": "22.7.5",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "copyfiles": "^2.4.1",
-    "next": "15.0.0-canary.173",
-    "payload": "3.0.0-beta.111",
-    "react": "19.0.0-rc-3edc000d-20240926",
-    "react-dom": "19.0.0-rc-3edc000d-20240926",
-    "typescript": "5.5.3"
-  },
-  "pnpm": {
-    "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.1",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-    }
-  },
-  "publishConfig": {
-    "main": "./dist/index.js",
-    "registry": "https://registry.npmjs.org/",
-    "types": "./dist/index.d.ts",
-    "exports": {
-      ".": {
-        "import": "./dist/index.js",
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      }
-    }
-  },
-  "exports": {
-    ".": {
-      "import": "./src/index.ts",
-      "default": "./src/index.ts",
-      "types": "./src/index.ts"
-    }
-  }
+	"name": "payloadcms-plugin-square",
+	"version": "0.0.0-development",
+	"homepage:": "https://payloadcms.com",
+	"description": "Unofficial Square plugin for Payload",
+	"author": "Jeth",
+	"license": "MIT",
+	"files": [
+		"dist",
+		"LICENSE.md",
+		"README.md"
+	],
+	"main": "./src/index.ts",
+	"types": "./src/index.ts",
+	"type": "module",
+	"scripts": {
+		"build": "tsc --project tsconfig.json",
+		"build:all": "pnpm build && pnpm -C dev build",
+		"build:app": "pnpm -C dev build",
+		"clean": "rimraf {dist,*.tsbuildinfo,package}",
+		"copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png}\" dist/",
+		"dev": "pnpm -C dev dev",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
+		"prepack": "pnpm prepublishOnly",
+		"prepublishOnly": "pnpm clean && pnpm build && pnpm copyfiles",
+		"semantic-release": "semantic-release"
+	},
+	"peerDependencies": {
+		"next": "15.0.0-canary.173",
+		"payload": "^3.0.0-beta.111"
+	},
+	"dependencies": {
+		"@payloadcms/ui": "3.0.0-beta.111",
+		"react": "19.0.0-rc-3edc000d-20240926",
+		"react-dom": "19.0.0-rc-3edc000d-20240926",
+		"square": "^39.0.0"
+	},
+	"devDependencies": {
+		"@payloadcms/eslint-config": "3.0.0-beta.97",
+		"@types/node": "22.7.5",
+		"@types/react": "npm:types-react@19.0.0-rc.1",
+		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+		"copyfiles": "^2.4.1",
+		"next": "15.0.0-canary.173",
+		"payload": "3.0.0-beta.111",
+		"react": "19.0.0-rc-3edc000d-20240926",
+		"react-dom": "19.0.0-rc-3edc000d-20240926",
+		"semantic-release": "^24.2.0",
+		"typescript": "5.5.3"
+	},
+	"pnpm": {
+		"overrides": {
+			"@types/react": "npm:types-react@19.0.0-rc.1",
+			"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+		}
+	},
+	"publishConfig": {
+		"access": "public",
+		"main": "./dist/index.js",
+		"registry": "https://registry.npmjs.org/",
+		"types": "./dist/index.d.ts",
+		"exports": {
+			".": {
+				"import": "./dist/index.js",
+				"types": "./dist/index.d.ts",
+				"default": "./dist/index.js"
+			}
+		}
+	},
+	"exports": {
+		".": {
+			"import": "./src/index.ts",
+			"default": "./src/index.ts",
+			"types": "./src/index.ts"
+		}
+	}
 }
