Better support for various files indentation

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,9 +7,9 @@
 	"tabWidth": 4,
 	"overrides": [
 		{
-			"files": "*.yml",
+			"files": "*.{yml,yaml}",
 			"options": {
-				"useTabs": true,
+				"useTabs": false,
 				"tabWidth": 2
 			}
 		}
