--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,57 +1,63 @@
 {
-  "npm.packageManager": "pnpm",
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": "explicit"
-    }
-  },
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": "explicit"
-    }
-  },
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": "explicit"
-    }
-  },
-  "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true
-  },
-  "[jsonc]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true
-  },
-  "editor.formatOnSaveMode": "file",
-  "eslint.rules.customizations": [
-    // Default all ESLint errors to 'warn' to differentate from TypeScript's 'error' level
-    {
-      "rule": "*",
-      "severity": "warn"
-    },
-    // Silence some warnings that will get auto-fixed
-    {
-      "rule": "perfectionist/*",
-      "severity": "off",
-      "fixable": true
-    },
-    {
-      "rule": "curly",
-      "severity": "off",
-      "fixable": true
-    },
-    {
-      "rule": "object-shorthand",
-      "severity": "off",
-      "fixable": true
-    }
-  ],
+	"npm.packageManager": "pnpm",
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"[typescript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode",
+		"editor.formatOnSave": true,
+		"editor.codeActionsOnSave": {
+			"source.fixAll.eslint": "explicit"
+		}
+	},
+	"[typescriptreact]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode",
+		"editor.formatOnSave": true,
+		"editor.codeActionsOnSave": {
+			"source.fixAll.eslint": "explicit"
+		}
+	},
+	"[javascript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode",
+		"editor.formatOnSave": true,
+		"editor.codeActionsOnSave": {
+			"source.fixAll.eslint": "explicit"
+		}
+	},
+	"[json]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode",
+		"editor.formatOnSave": true
+	},
+	"[jsonc]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode",
+		"editor.formatOnSave": true
+	},
+	"[yaml]": {
+		"editor.insertSpaces": true,
+		"editor.tabSize": 2,
+		"editor.autoIndent": "advanced",
+		"diffEditor.ignoreTrimWhitespace": false
+	},
+	"editor.formatOnSaveMode": "file",
+	"eslint.rules.customizations": [
+		// Default all ESLint errors to 'warn' to differentate from TypeScript's 'error' level
+		{
+			"rule": "*",
+			"severity": "warn"
+		},
+		// Silence some warnings that will get auto-fixed
+		{
+			"rule": "perfectionist/*",
+			"severity": "off",
+			"fixable": true
+		},
+		{
+			"rule": "curly",
+			"severity": "off",
+			"fixable": true
+		},
+		{
+			"rule": "object-shorthand",
+			"severity": "off",
+			"fixable": true
+		}
+	]
 }
