--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "payloadcms-plugin-square",
 	"version": "0.0.0-development",
-	"homepage:": "https://payloadcms.com",
+	"homepage:": "https://github.com/TheJethFX/payloadcms-plugin-square",
 	"description": "Unofficial Square plugin for Payload",
 	"author": "Jeth",
 	"license": "MIT",
