--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,8 @@ jobs:
     needs:
       - build
     steps:
+      - uses: actions/checkout@v4
+
       - uses: actions/cache@v4
         with:
           path: ./*
