--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"payload": "3.0.0-beta.111",
 		"react": "19.0.0-rc-3edc000d-20240926",
 		"react-dom": "19.0.0-rc-3edc000d-20240926",
+		"rimraf": "^6.0.1",
 		"semantic-release": "^24.2.0",
 		"typescript": "5.5.3"
 	},
