--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
 	"name": "payloadcms-plugin-square",
 	"version": "1.0.0-next.1",
-	"homepage:": "https://github.com/TheJethFX/payloadcms-plugin-square",
+	"homepage": "https://github.com/TheJethFX/payloadcms-plugin-square",
 	"description": "Unofficial Square plugin for Payload",
 	"author": "Jeth",
 	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/TheJethFX/payloadcms-plugin-square.git"
+	},
 	"files": [
 		"dist",
 		"LICENSE.md",
