--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
 			"path": "cz-conventional-changelog"
 		}
 	},
-	"main": "./src/index.ts",
-	"types": "./src/index.ts",
+	"main": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"type": "module",
 	"scripts": {
 		"build": "tsc --project tsconfig.json",
