--- a/package.json
+++ b/package.json
@@ -77,22 +77,13 @@
 	},
 	"publishConfig": {
 		"access": "public",
-		"main": "./dist/index.js",
-		"registry": "https://registry.npmjs.org/",
-		"types": "./dist/index.d.ts",
-		"exports": {
-			".": {
-				"import": "./dist/index.js",
-				"types": "./dist/index.d.ts",
-				"default": "./dist/index.js"
-			}
-		}
+		"registry": "https://registry.npmjs.org/"
 	},
 	"exports": {
 		".": {
-			"import": "./src/index.ts",
-			"default": "./src/index.ts",
-			"types": "./src/index.ts"
+			"import": "./dist/index.js",
+			"types": "./dist/types/index.d.ts",
+			"default": "./dist/index.js"
 		}
 	}
 }
