--- a/package.json
+++ b/package.json
@@ -52,12 +52,12 @@
 		"semantic-release": "semantic-release"
 	},
 	"peerDependencies": {
-		"@payloadcms/db-mongodb": "^3.3.0",
-		"@payloadcms/ui": "^3.3.0",
+		"@payloadcms/db-mongodb": "^3.4.0",
+		"@payloadcms/ui": "^3.4.0",
 		"next": "^15.0.3",
-		"payload": "^3.3.0",
-		"react": "^19.0.0 || ^19.0.0-rc-66855b96-20241106",
-		"react-dom": "^19.0.0 || ^19.0.0-rc-66855b96-20241106",
+		"payload": "^3.4.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
 		"square": "^39.0.0"
 	},
 	"devDependencies": {
@@ -65,30 +65,42 @@
 		"@semantic-release/changelog": "^6.0.3",
 		"@semantic-release/git": "^10.0.1",
 		"@types/node": "22.7.5",
-		"@types/react": "npm:types-react@19.0.0-rc.1",
-		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+		"@types/react": "^19.0.0",
+		"@types/react-dom": "^19.0.0",
 		"cz-conventional-changelog": "^3.3.0",
 		"copyfiles": "^2.4.1",
 		"next": "15.0.3",
 		"rimraf": "^6.0.1",
 		"semantic-release": "^24.2.0",
+		"square": "^39.0.0",
 		"typescript": "5.5.3"
-	},
-	"pnpm": {
-		"overrides": {
-			"@types/react": "npm:types-react@19.0.0-rc.1",
-			"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-		}
 	},
 	"publishConfig": {
 		"access": "public",
-		"registry": "https://registry.npmjs.org/"
+		"registry": "https://registry.npmjs.org/",
+		"exports": {
+			".": {
+				"import": "./dist/index.js",
+				"types": "./dist/types/index.d.ts",
+				"default": "./dist/index.js"
+			},
+			"./client": {
+				"import": "./dist/exports/client.js",
+				"types": "./dist/types/exports/client.d.ts",
+				"default": "./dist/exports/client.js"
+			}
+		}
 	},
 	"exports": {
 		".": {
-			"import": "./dist/index.js",
-			"types": "./dist/types/index.d.ts",
-			"default": "./dist/index.js"
+			"import": "./src/index.ts",
+			"types": "./src/index.ts",
+			"default": "./src/index.ts"
+		},
+		"./client": {
+			"import": "./src/exports/client.ts",
+			"types": "./src/exports/client.ts",
+			"default": "./src/exports/client.ts"
 		}
 	}
 }
