--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 	"version": "1.2.0-next.1",
 	"homepage": "https://github.com/TheJethFX/payloadcms-plugin-square",
 	"description": "Unofficial Square plugin for Payload",
-	"author": "Jeth",
+	"author": {
+		"name": "Jeth"
+	},
 	"license": "MIT",
 	"repository": {
 		"type": "git",
