--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
 			"path": "cz-conventional-changelog"
 		}
 	},
-	"main": "./dist/index.js",
-	"types": "./dist/index.d.ts",
+	"main": "./src/index.ts",
+	"types": "./src/index.ts",
 	"type": "module",
 	"scripts": {
 		"build": "tsc --project tsconfig.json",
@@ -81,15 +81,17 @@
 	"publishConfig": {
 		"access": "public",
 		"registry": "https://registry.npmjs.org/",
+		"main": "./dist/index.js",
+		"types": "./dist/index.d.ts",
 		"exports": {
 			".": {
 				"import": "./dist/index.js",
-				"types": "./dist/types/index.d.ts",
+				"types": "./dist/index.d.ts",
 				"default": "./dist/index.js"
 			},
 			"./client": {
 				"import": "./dist/exports/client.js",
-				"types": "./dist/types/exports/client.d.ts",
+				"types": "./dist/exports/client.d.ts",
 				"default": "./dist/exports/client.js"
 			}
 		}
