fix: Export TypeScript files in 'dist' instead of 'dist/types'

--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
 		"exports": {
 			".": {
 				"import": "./dist/index.js",
-				"types": "./dist/types/index.d.ts",
+				"types": "./dist/index.d.ts",
 				"default": "./dist/index.js"
 			},
 			"./client": {
