--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
 		"semantic-release": "semantic-release"
 	},
 	"peerDependencies": {
-		"@payloadcms/db-mongodb": "^3.4.0",
-		"@payloadcms/ui": "^3.4.0",
-		"next": "^15.0.3",
-		"payload": "^3.4.0",
+		"@payloadcms/db-mongodb": "^3.5.0",
+		"@payloadcms/ui": "^3.5.0",
+		"next": "^15.0.4",
+		"payload": "^3.5.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"square": "^39.0.0"
@@ -68,11 +68,11 @@
 		"@semantic-release/changelog": "^6.0.3",
 		"@semantic-release/git": "^10.0.1",
 		"@types/node": "22.7.5",
-		"@types/react": "^19.0.0",
-		"@types/react-dom": "^19.0.0",
-		"cz-conventional-changelog": "^3.3.0",
+		"@types/react": "^19.0.1",
+		"@types/react-dom": "^19.0.1",
 		"copyfiles": "^2.4.1",
-		"next": "15.0.3",
+		"cz-conventional-changelog": "^3.3.0",
+		"next": "15.0.4",
 		"rimraf": "^6.0.1",
 		"semantic-release": "^24.2.0",
 		"square": "^39.0.0",
@@ -83,6 +83,7 @@
 		"registry": "https://registry.npmjs.org/",
 		"main": "./dist/index.js",
 		"types": "./dist/types/index.d.ts",
+		"provenance": true,
 		"exports": {
 			".": {
 				"import": "./dist/index.js",
