--- a/package.json
+++ b/package.json
@@ -98,14 +98,14 @@
 	},
 	"exports": {
 		".": {
-			"import": "./dist/index.js",
-			"types": "./dist/index.d.ts",
-			"default": "./dist/index.js"
+			"import": "./src/index.ts",
+			"types": "./src/index.ts",
+			"default": "./src/index.ts"
 		},
 		"./client": {
-			"import": "./dist/exports/client.js",
-			"types": "./dist/exports/client.d.ts",
-			"default": "./dist/exports/client.js"
+			"import": "./src/exports/client.ts",
+			"types": "./src/exports/client.ts",
+			"default": "./src/exports/client.ts"
 		}
 	}
 }
