--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
 		"skipLibCheck": true,
 		"strict": true
 	},
-	"include": ["src/**/*"]
+	"include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts"]
 }
