--- a/package.json
+++ b/package.json
@@ -79,34 +79,44 @@
 		"square": "^39.0.0",
 		"typescript": "5.5.3"
 	},
-	"publishConfig": {
-		"access": "public",
-		"registry": "https://registry.npmjs.org/",
-		"main": "./dist/index.js",
-		"types": "./dist/types/index.d.ts",
-		"exports": {
-			".": {
-				"import": "./dist/index.js",
-				"types": "./dist/index.d.ts",
-				"default": "./dist/index.js"
-			},
-			"./client": {
-				"import": "./dist/exports/client.js",
-				"types": "./dist/exports/client.d.ts",
-				"default": "./dist/exports/client.js"
-			}
-		}
-	},
 	"exports": {
 		".": {
 			"import": "./src/index.ts",
 			"types": "./src/index.ts",
 			"default": "./src/index.ts"
 		},
+		"./types": {
+			"import": "./src/exports/types.ts",
+			"types": "./src/exports/types.ts",
+			"default": "./src/exports/types.ts"
+		},
 		"./client": {
 			"import": "./src/exports/client.ts",
 			"types": "./src/exports/client.ts",
 			"default": "./src/exports/client.ts"
+		}
+	},
+	"publishConfig": {
+		"access": "public",
+		"registry": "https://registry.npmjs.org/",
+		"main": "./dist/index.js",
+		"types": "./dist/index.d.ts",
+		"exports": {
+			".": {
+				"import": "./dist/index.js",
+				"types": "./dist/index.d.ts",
+				"default": "./dist/index.js"
+			},
+			"./types": {
+				"import": "./dist/exports/types.js",
+				"types": "./dist/exports/types.d.ts",
+				"default": "./dist/exports/types.js"
+			},
+			"./client": {
+				"import": "./dist/exports/client.js",
+				"types": "./dist/exports/client.d.ts",
+				"default": "./dist/exports/client.js"
+			}
 		}
 	}
 }
